--- a/index.html
+++ b/index.html
@@ -4,183 +4,72 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Accueil - Mairie de Kolwezi</title>
-
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
 <style>
-* { margin:0; padding:0; box-sizing:border-box; }
-body { font-family: 'Roboto', sans-serif; background:#f4f7f6; color:#333; }
-
-/* Header & Navigation */
-header { background:#004d40; color:#fff; padding:15px 20px; position:sticky; top:0; z-index:1000; display:flex; justify-content:space-between; align-items:center; }
-header h1 { font-size:1.6rem; font-weight:bold; }
-nav { position:relative; }
-nav ul { display:flex; list-style:none; gap:15px; }
-nav ul li { position:relative; }
-nav ul li a { color:#fff; padding:8px 5px; display:block; font-weight:500; transition:0.3s; }
-nav ul li a:hover { color:#ffc107; }
-/* Dropdown */
-nav ul li ul { display:none; position:absolute; top:100%; left:0; background:#00695c; min-width:200px; border-radius:5px; box-shadow:0 4px 8px rgba(0,0,0,0.2); }
-nav ul li:hover ul { display:block; }
-nav ul li ul li a { margin:0; padding:10px; color:#fff; font-weight:400; }
-nav ul li ul li a:hover { background:#004d40; color:#ffc107; }
-/* Hamburger for mobile */
-.menu-toggle { display:none; cursor:pointer; font-size:1.5rem; color:#fff; }
-
-/* Slider */
-.slider { position:relative; overflow:hidden; margin-bottom:40px; border-radius:8px; }
-.slides { display:flex; transition:0.6s ease; }
-.slide { min-width:100%; position:relative; }
-.slide img { width:100%; height:500px; object-fit:cover; filter:brightness(75%); }
-.slide-caption { position:absolute; bottom:40px; left:40px; color:#fff; background:rgba(0,0,0,0.5); padding:15px 25px; border-radius:6px; font-size:1.3rem; }
-
-/* Slider arrows */
-.prev, .next { position:absolute; top:50%; transform:translateY(-50%); background:rgba(0,0,0,0.4); color:#fff; padding:12px; border-radius:50%; cursor:pointer; font-size:1.5rem; }
-.prev { left:20px; }
-.next { right:20px; }
-.prev:hover, .next:hover { background:rgba(0,0,0,0.7); }
-
-/* Slider dots */
-.dots { text-align:center; position:absolute; bottom:15px; width:100%; }
-.dot { display:inline-block; width:12px; height:12px; margin:0 5px; background:#fff; border-radius:50%; cursor:pointer; opacity:0.5; transition:0.3s; }
-.dot.active { opacity:1; background:#ffc107; }
-
-/* Sections */
-section { padding:60px 20px; max-width:1200px; margin:auto; background:#fff; border-radius:8px; box-shadow:0 2px 4px rgba(0,0,0,0.1); margin-bottom:30px; }
-section h2 { color:#004d40; margin-bottom:20px; }
-section p, section ul { font-size:1.1rem; line-height:1.6; }
-section ul { list-style:disc; margin-left:20px; }
-.service-cards { display:flex; flex-wrap:wrap; gap:20px; }
-.card { background:#fefefe; border-radius:8px; box-shadow:0 4px 6px rgba(0,0,0,0.1); flex:1; min-width:250px; padding:20px; transition:0.3s; }
-.card:hover { box-shadow:0 8px 12px rgba(0,0,0,0.2); }
-
-/* Footer */
-footer { background:#004d40; color:#fff; text-align:center; padding:30px 20px; }
-
-/* Responsive */
-@media(max-width:768px){
-    header h1 { font-size:1.3rem; }
-    nav ul { flex-direction:column; display:none; background:#004d40; position:absolute; top:60px; left:0; width:100%; }
-    nav ul.show { display:flex; }
-    nav ul li ul { position:static; box-shadow:none; border-radius:0; }
-    .menu-toggle { display:block; }
-    .slide-caption { font-size:1rem; padding:10px 15px; }
-    .service-cards { flex-direction:column; }
-}
+    body { font-family: Arial, sans-serif; background:#f4f7f6; margin:0; }
+    header { background:#005B4F; color:#fff; padding:15px 20px; position:sticky; top:0; }
+    nav a { color:#fff; margin:0 10px; text-decoration:none; font-weight:bold; }
+    nav a:hover { color:#FFC107; }
+    .slider { max-height:400px; overflow:hidden; margin:20px 0; }
+    .slides { display:flex; transition:0.5s; }
+    .slide { min-width:100%; }
+    .slide img { width:100%; height:400px; object-fit:cover; filter:brightness(80%); }
+    .slide-caption { position:absolute; bottom:30px; left:30px; color:#fff; background:rgba(0,0,0,0.5); padding:10px 20px; border-radius:5px; }
+    section { padding:40px 20px; max-width:1000px; margin:auto; }
+    footer { background:#005B4F; color:#fff; text-align:center; padding:20px; margin-top:40px; }
 </style>
 </head>
 <body>
 
 <header>
-    <h1>Mairie de Kolwezi</h1>
-    <div class="menu-toggle">&#9776;</div>
     <nav>
-        <ul>
-            <li><a href="#accueil">Accueil</a></li>
-            <li><a href="#actualites">Actualités</a></li>
-            <li>
-                <a href="#">Services &#9662;</a>
-                <ul>
-                    <li><a href="#etatcivil">État civil</a></li>
-                    <li><a href="#taxes">Taxes et impôts</a></li>
-                    <li><a href="#demarches">Démarches administratives</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">Démarches &#9662;</a>
-                <ul>
-                    <li><a href="#formulaires">Formulaires en ligne</a></li>
-                    <li><a href="#rendezvous">Prise de rendez-vous</a></li>
-                    <li><a href="#paiement">Paiement en ligne</a></li>
-                </ul>
-            </li>
-            <li><a href="#projets">Projets</a></li>
-            <li><a href="#galerie">Galerie</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+        <a href="index.html">Accueil</a>
+        <a href="mairie.html">La Mairie</a>
+        <a href="actualites.html">Actualités</a>
+        <a href="services.html">Services</a>
+        <a href="demarches.html">Démarches</a>
+        <a href="projets.html">Projets</a>
+        <a href="galerie.html">Galerie</a>
+        <a href="faq.html">Contact</a>
     </nav>
 </header>
 
-<!-- Slider -->
 <section class="slider">
     <div class="slides">
         <div class="slide">
-            <img src="https://via.placeholder.com/1200x500?text=Bienvenue+à+la+Mairie+de+Kolwezi" alt="Slider 1">
+            <img src="https://via.placeholder.com/1200x400?text=Bienvenue+à+la+Mairie+de+Kolwezi" alt="Slider 1">
             <div class="slide-caption">Message du Maire et actualités importantes</div>
         </div>
         <div class="slide">
-            <img src="https://via.placeholder.com/1200x500?text=Services+essentiels" alt="Slider 2">
+            <img src="https://via.placeholder.com/1200x400?text=Services+essentiels" alt="Slider 2">
             <div class="slide-caption">Accès rapide aux services : état civil, taxes, démarches...</div>
         </div>
     </div>
-    <div class="prev">&#10094;</div>
-    <div class="next">&#10095;</div>
-    <div class="dots">
-        <span class="dot active"></span>
-        <span class="dot"></span>
-    </div>
 </section>
 
-<!-- Présentation -->
-<section id="accueil">
+<section>
     <h2>Présentation brève de la mairie</h2>
-    <p>Bienvenue à la Mairie de Kolwezi. Nous servons nos citoyens avec transparence et efficacité, tout en valorisant le développement local et la culture de notre ville.</p>
+    <p>Bienvenue à la Mairie de Kolwezi. Nous nous engageons à servir les citoyens avec efficacité et transparence.</p>
 </section>
 
-<!-- Services -->
-<section id="services">
-    <h2>Services essentiels</h2>
-    <div class="service-cards">
-        <div class="card"><h3>État civil</h3><p>Naissances, mariages, décès et certificats divers.</p></div>
-        <div class="card"><h3>Taxes et impôts</h3><p>Payement, informations et formulaires en ligne.</p></div>
-        <div class="card"><h3>Démarches administratives</h3><p>Formulaires, rendez-vous et licences accessibles facilement.</p></div>
-    </div>
-</section>
-
-<!-- Contact -->
-<section id="contact">
-    <h2>Contact</h2>
-    <p>Pour toute information, contactez-nous à <a href="mailto:contact@mairie-kolwezi.cd">contact@mairie-kolwezi.cd</a></p>
+<section>
+    <h2>Accès rapide aux services essentiels</h2>
+    <ul>
+        <li>État civil</li>
+        <li>Taxes et impôts</li>
+        <li>Démarches administratives</li>
+    </ul>
 </section>
 
 <footer>
-    <p>&copy; 2025 Mairie de Kolwezi | Tous droits réservés</p>
+    <p>&copy; 2025 Mairie de Kolwezi | <a href="index.html">Accueil</a></p>
 </footer>
 
-<script type="module">
-/* Hamburger toggle */
-const menuToggle = document.querySelector('.menu-toggle');
-const navUl = document.querySelector('nav ul');
-menuToggle.addEventListener('click', ()=>{ navUl.classList.toggle('show'); });
-
-/* Slider avec dots */
+<script>
 let index = 0;
 const slides = document.querySelectorAll('.slide');
-const dots = document.querySelectorAll('.dot');
-function showSlide(i){
-    slides.forEach((s, idx)=> s.style.transform = `translateX(${-100*i}%)`);
-    dots.forEach(d => d.classList.remove('active'));
-    dots[i].classList.add('active');
-}
-function nextSlide(){ index = (index + 1) % slides.length; showSlide(index); }
-function prevSlide(){ index = (index - 1 + slides.length) % slides.length; showSlide(index); }
-document.querySelector('.next').addEventListener('click', nextSlide);
-document.querySelector('.prev').addEventListener('click', prevSlide);
-dots.forEach((dot, i)=> dot.addEventListener('click', ()=>{ index=i; showSlide(index); }));
-setInterval(nextSlide, 5000);
-
-/* Firebase */
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js";
-const firebaseConfig = {
-  apiKey: "AIzaSyCr3MVt72I5aa_v0IBw7tC142kBjQJTdbU",
-  authDomain: "mairie-web-site.firebaseapp.com",
-  projectId: "mairie-web-site",
-  storageBucket: "mairie-web-site.firebasestorage.app",
-  messagingSenderId: "518997735244",
-  appId: "1:518997735244:web:a4af3a25470a39e20401e9"
-};
-const app = initializeApp(firebaseConfig);
+function showSlide(i){ slides.forEach((s, idx)=> s.style.transform = `translateX(${-100*i}%)`);}
+function nextSlide(){ index = (index + 1) % slides.length; showSlide(index);}
+setInterval(nextSlide, 4000);
 </script>
 
 </body>
